--- a/src/main/resources/assets/mbackpacks/lang/en_us.json
+++ b/src/main/resources/assets/mbackpacks/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.mbackpacks.backpack" : "Backpack"
+  "item.mbackpacks.small_backpack" : "Small Backpack",
+  "item.mbackpacks.medium_backpack" : "Medium Backpack",
+  "item.mbackpacks.big_backpack" : "Big Backpack"
 }
